@@ -9,6 +9,7 @@
 	all : Std.random(x) when x <= 0 is now always 0
 	spod : added serialized data with SData<T>
 	all : Dispatcher will now throw DETooManyValues
+	all : speed up neko compilation by using native compiler
 
 2012-07-16: 2.10
 	java/cs : added two new targets (beta)
